updated readme with hsqldb configuration